Alteração do README

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <span class="error"></span>
           </div>
 
-          <div class="input-field date-field>
+          <div class="input-field date-field">
             <input id="birth-year" class="birth-year" type="text" name="birth-year" autocomplete="off" required>
             <label for="birth-year">Ano</label>
             <span class="error"></span>
